// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Finder API #expand should expand the given item and emit the \`expand\` event 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div role="button" draggable="false" class="item expanded" tabindex="0" aria-expanded="true">
        <!----> <input type="checkbox" aria-label="Test 11">
        <div item="[object Object]" class="inner-item">Test 11</div>
        <div class="arrow"></div>
      </div>
      <div role="button" draggable="false" class="item" tabindex="-1">
        <!----> <input type="checkbox" aria-label="Test 12">
        <div item="[object Object]" class="inner-item">Test 12</div>
        <!---->
      </div>
    </div>
    <div class="list-container">
      <div class="list">
        <div role="button" draggable="false" class="item" tabindex="-1">
          <!----> <input type="checkbox" aria-label="Test 111">
          <div item="[object Object]" class="inner-item">Test 111</div>
          <!---->
        </div>
        <div role="button" draggable="false" class="item expanded" tabindex="0">
          <!----> <input type="checkbox" aria-label="Test 112">
          <div item="[object Object]" class="inner-item">Test 112</div>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder Drag & Drop should match snapshot 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div class="drop-zone">
        <!---->
      </div>
      <div role="button" draggable="true" class="item draggable" tabindex="0">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 11</div>
        <div class="arrow"></div>
      </div>
      <div class="drop-zone">
        <!---->
      </div>
      <div role="button" draggable="true" class="item draggable" tabindex="-1">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 12</div>
        <!---->
      </div>
      <div class="drop-zone last">
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder Selection should match snapshot 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div role="button" draggable="false" class="item" tabindex="0">
        <!----> <input type="checkbox" aria-label="Test 11">
        <div item="[object Object]" class="inner-item">Test 11</div>
        <div class="arrow"></div>
      </div>
      <div role="button" draggable="false" class="item" tabindex="-1">
        <!----> <input type="checkbox" aria-label="Test 12">
        <div item="[object Object]" class="inner-item">Test 12</div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div role="button" draggable="false" class="item" tabindex="0">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 11</div>
        <div class="arrow"></div>
      </div>
      <div role="button" draggable="false" class="item" tabindex="-1">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 12</div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with a custom item component 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div role="button" draggable="false" class="item" tabindex="0">
        <!---->
        <!----> <span item="[object Object]" class="inner-item">Test 11</span>
        <div class="arrow"></div>
      </div>
      <div role="button" draggable="false" class="item" tabindex="-1">
        <!---->
        <!----> <span item="[object Object]" class="inner-item">Test 12</span>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with an updated tree 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div role="button" draggable="false" class="item" tabindex="0">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 31</div>
        <div class="arrow"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with custom theme 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list" style="border-color: #eee; border-width: 3px;">
      <div role="button" draggable="false" class="item" tabindex="0">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 11</div>
        <div class="arrow" style="border-color: #555;"></div>
      </div>
      <div role="button" draggable="false" class="item" tabindex="-1">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 12</div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with default expanded 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div role="button" draggable="false" aria-expanded="true" class="item expanded" tabindex="0">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 11</div>
        <div class="arrow"></div>
      </div>
      <div role="button" draggable="false" class="item" tabindex="-1">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 12</div>
        <!---->
      </div>
    </div>
    <div class="list-container">
      <div class="list">
        <div role="button" draggable="false" class="item" tabindex="-1">
          <!---->
          <!---->
          <div item="[object Object]" class="inner-item">Test 111</div>
          <!---->
        </div>
        <div role="button" draggable="false" class="item expanded" tabindex="0">
          <!---->
          <!---->
          <div item="[object Object]" class="inner-item">Test 112</div>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with expanded item and emit event 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div role="button" draggable="false" class="item expanded" tabindex="0" aria-expanded="true">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 11</div>
        <div class="arrow"></div>
      </div>
      <div role="button" draggable="false" class="item" tabindex="-1">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 12</div>
        <!---->
      </div>
    </div>
    <div class="list-container">
      <div class="list">
        <div role="button" draggable="false" class="item" tabindex="0">
          <!---->
          <!---->
          <div item="[object Object]" class="inner-item">Test 111</div>
          <!---->
        </div>
        <div role="button" draggable="false" class="item" tabindex="-1">
          <!---->
          <!---->
          <div item="[object Object]" class="inner-item">Test 112</div>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with filter 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div role="button" draggable="false" class="item" tabindex="0">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 12</div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with initial filter 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div role="button" draggable="false" class="item" tabindex="0">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 11</div>
        <div class="arrow"></div>
      </div>
      <div role="button" draggable="false" class="item" tabindex="-1">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 12</div>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with no children 1`] = `<div class="tree-container"></div>`;

exports[`Finder should match snapshot with sort 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div role="button" draggable="false" class="item" tabindex="0">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 12</div>
        <!---->
      </div>
      <div role="button" draggable="false" class="item" tabindex="-1">
        <!---->
        <!---->
        <div item="[object Object]" class="inner-item">Test 11</div>
        <div class="arrow"></div>
      </div>
    </div>
  </div>
</div>
`;
